--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -30,5 +30,6 @@
     </script>
     <script src="{{ site.url }}/assets/javascript/main.js"></script>
     {% include global/customizer.html %}
+    {% include website/masterclass.html %}
   </body>
 </html>
