--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,6 +4,8 @@
     {% include global/head.html %}
   </head>
   <body>
+    {% include website/banner.html %}
+
     {{ content }}
 
     {% if page.modals %}
