--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -9280,6 +9280,7 @@ button.tag:active,
   --bulma-input-border-width: var(--bulma-control-border-width);
   --bulma-input-border-l: var(--bulma-border-l);
   --bulma-input-border-l-delta: 0%;
+  --bulma-input-border-color: hsl(var(--bulma-input-h), var(--bulma-input-s), calc(var(--bulma-input-border-l) + var(--bulma-input-border-l-delta)));
   --bulma-input-hover-border-l-delta: var(--bulma-hover-border-l-delta);
   --bulma-input-active-border-l-delta: var(--bulma-active-border-l-delta);
   --bulma-input-focus-h: var(--bulma-focus-h);
@@ -9306,7 +9307,7 @@ button.tag:active,
 
 .select select, .input, .textarea {
   background-color: hsl(var(--bulma-input-h), var(--bulma-input-s), calc(var(--bulma-input-background-l) + var(--bulma-input-background-l-delta)));
-  border-color: hsl(var(--bulma-input-h), var(--bulma-input-s), calc(var(--bulma-input-border-l) + var(--bulma-input-border-l-delta)));
+  border-color: var(--bulma-input-border-color);
   border-radius: var(--bulma-input-radius);
   color: hsl(var(--bulma-input-h), var(--bulma-input-s), var(--bulma-input-color-l));
 }
@@ -17643,6 +17644,9 @@ label.panel-block:hover {
   --bulma-hero-body-padding-small: 1.5rem;
   --bulma-hero-body-padding-medium: 9rem 4.5rem;
   --bulma-hero-body-padding-large: 18rem 6rem;
+  --bulma-hero-gradient-h-offset: 5deg;
+  --bulma-hero-gradient-s-offset: 10%;
+  --bulma-hero-gradient-l-offset: 5%;
 }
 
 .hero {
@@ -33952,7 +33956,7 @@ has-background-moon.is-hoverable:active {
 }
 
 .bulma-overlay-mixin-parent {
-  background-image: url(https://source.unsplash.com/La2kOu2dmH4/640x320);
+  background-image: url(/assets/images/unsplash/La2kOu2dmH4.jpg);
   background-size: cover;
   border-radius: 0.5em;
   position: relative;
@@ -34007,7 +34011,7 @@ has-background-moon.is-hoverable:active {
 }
 
 .bulma-center-mixin-parent {
-  background-image: url(https://source.unsplash.com/xo3Bd2tYeqg/640x320);
+  background-image: url(/assets/images/unsplash/La2kOu2dmH4.jpg);
   background-size: cover;
   border-radius: 0.5em;
   position: relative;
