--- a/docs/_includes/docs/components/logos-item.html
+++ b/docs/_includes/docs/components/logos-item.html
@@ -1,7 +1,7 @@
 <div
   {% if include.unsplash %}
     class="bd-logos-item"
-    style="background-image: url(https://source.unsplash.com/{{ include.unsplash }}/480x480)"
+    style="background-image: url(/assets/images/unsplash/{{ include.unsplash }}.jpg)"
   {% else %}
     class="bd-logos-item is-transparent"
   {% endif %}
