--- a/docs/_sass/docs/examples.scss
+++ b/docs/_sass/docs/examples.scss
@@ -28,7 +28,7 @@
 }
 
 .bulma-overlay-mixin-parent {
-  background-image: url(https://source.unsplash.com/La2kOu2dmH4/640x320);
+  background-image: url(/assets/images/unsplash/La2kOu2dmH4.jpg);
   background-size: cover;
   border-radius: 0.5em;
   position: relative;
@@ -73,7 +73,7 @@
 }
 
 .bulma-center-mixin-parent {
-  background-image: url(https://source.unsplash.com/xo3Bd2tYeqg/640x320);
+  background-image: url(/assets/images/unsplash/La2kOu2dmH4.jpg);
   background-size: cover;
   border-radius: 0.5em;
   position: relative;
