--- a/docs/_sass/home/bubble.scss
+++ b/docs/_sass/home/bubble.scss
@@ -129,7 +129,7 @@ $bubble-order: ("axbom", "jesseschoff", "ale_codes", "MyTopSecretName");
 $delay-factor: 0.3s;
 
 @for $index from 1 through length($bubble-order) {
-  $name: nth($bubble-order, $index);
+  $name: list.nth($bubble-order, $index);
 
   .js-bubble-#{$name} {
     .bd-bubble-content {
