--- a/docs/_sass/home/bubble.scss
+++ b/docs/_sass/home/bubble.scss
@@ -1,3 +1,4 @@
+@use "sass:list";
 @use "sass/utilities/css-variables" as cv;
 @use "../utils";
 
@@ -128,7 +129,7 @@
 $bubble-order: ("axbom", "jesseschoff", "ale_codes", "MyTopSecretName");
 $delay-factor: 0.3s;
 
-@for $index from 1 through length($bubble-order) {
+@for $index from 1 through list.length($bubble-order) {
   $name: list.nth($bubble-order, $index);
 
   .js-bubble-#{$name} {
