--- a/docs/_sass/home/custom.scss
+++ b/docs/_sass/home/custom.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "sass/utilities/mixins" as mx;
 @use "sass/themes/light";
 
@@ -72,11 +73,11 @@ $sass: #bf4080;
       color: light.$scheme-main;
 
       &:hover {
-        background-color: darken($mauve, 2.5%);
+        background-color: color.adjust($mauve, $lightness: -2.5%);
       }
 
       &:active {
-        background-color: darken($mauve, 5%);
+        background-color: color.adjust($mauve, $lightness: -5%);
       }
     }
 
@@ -85,11 +86,11 @@ $sass: #bf4080;
       color: light.$scheme-main;
 
       &:hover {
-        background-color: darken($pink, 2.5%);
+        background-color: color.adjust($pink, $lightness: -2.5%);
       }
 
       &:active {
-        background-color: darken($pink, 5%);
+        background-color: color.adjust($pink, $lightness: -5%);
       }
     }
   }
