--- a/sass/helpers/typography.scss
+++ b/sass/helpers/typography.scss
@@ -149,6 +149,10 @@ $alignments: (
   font-weight: iv.$weight-bold !important;
 }
 
+.#{iv.$helpers-has-prefix}text-weight-extrabold {
+  font-weight: iv.$weight-extrabold !important;
+}
+
 .#{iv.$helpers-prefix}family-primary {
   font-family: dv.$family-primary !important;
 }
