Updates deprecated round functions
Signed-off-by: Cole Gentry <peapod2007@gmail.com>

--- a/sass/utilities/css-variables.scss
+++ b/sass/utilities/css-variables.scss
@@ -61,19 +61,19 @@
 @mixin register-hsl($name, $value) {
   @include register-var(
     $name,
-    round(color.channel($value, "hue", $space: hsl)),
+    math.round(color.channel($value, "hue", $space: hsl)),
     "",
     "-h"
   );
   @include register-var(
     $name,
-    round(color.channel($value, "saturation", $space: hsl)),
+    math.round(color.channel($value, "saturation", $space: hsl)),
     "",
     "-s"
   );
   @include register-var(
     $name,
-    round(color.channel($value, "lightness", $space: hsl)),
+    math.round(color.channel($value, "lightness", $space: hsl)),
     "",
     "-l"
   );
@@ -196,9 +196,9 @@
   $light: null,
   $dark: null
 ) {
-  $h: round(color.channel($base, "hue", $space: hsl)); // Hue
-  $s: round(color.channel($base, "saturation", $space: hsl)); // Saturation
-  $l: round(color.channel($base, "lightness", $space: hsl)); // Lightness
+  $h:math.round(color.channel($base, "hue", $space: hsl)); // Hue
+  $s:math.round(color.channel($base, "saturation", $space: hsl)); // Saturation
+  $l:math.round(color.channel($base, "lightness", $space: hsl)); // Lightness
   $base-lum: fn.bulmaColorLuminance($base);
   $l-base: math.round($l % 10); // Get lightness second digit: 53% -> 3%
   $l-0: 0%; // 5% or less
