Add $duration to initial-variables

--- a/sass/utilities/initial-variables.scss
+++ b/sass/utilities/initial-variables.scss
@@ -134,6 +134,7 @@ $breakpoints: (
 
 // Miscellaneous
 
+$duration: 294ms !default;
 $easing: ease-out !default;
 $radius-small: 0.25rem !default;
 $radius: 0.375rem !default;
