--- a/docs/_includes/website/banner.html
+++ b/docs/_includes/website/banner.html
@@ -1,13 +1,15 @@
 <div class="launch-code is-animated">
-  <h3><a href="https://cssmasterclass.io/" target="_blank"><img src="{{site.url}}/assets/images/masterclass/logo-desktop.png" height="40" width="300"></a></h3>
-
-  <div class="launch-shine">
-    <a class="shine" href="https://cssmasterclass.io/" target="_blank">
-      <span>Get <strong>20% off</strong> with code <code>BULMA</code></span>
-    </a>
-  </div>
+  <h3>
+    <a href="https://cssmasterclass.io/" target="_blank"
+      ><img
+        src="{{site.url}}/assets/images/masterclass/logo-desktop.png"
+        height="40"
+        width="300"
+    /></a>
+  </h3>
 
   <small>
-    Valid until the end of <strong>November 2024</strong>
+    Learn CSS with 🎓 online interactive courses,📺 educational videos, and
+    🧑🏻‍💻project-building tutorials.
   </small>
 </div>
