--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -7223,6 +7223,10 @@ a.box:active {
   --bulma-button-border-width: max(2px, 0.125em);
   --bulma-button-outer-shadow-alpha: 1;
 }
+.button.is-outlined[disabled], fieldset[disabled] .button.is-outlined {
+  background-color: transparent;
+  box-shadow: none;
+}
 .button.is-inverted {
   background-color: hsl(var(--bulma-button-h), var(--bulma-button-s), calc(var(--bulma-button-color-l) + var(--bulma-button-background-l-delta)));
   color: hsl(var(--bulma-button-h), var(--bulma-button-s), var(--bulma-button-background-l));
@@ -37358,7 +37362,6 @@ div.shine {
   }
   .launch-code h3,
   .launch-code small {
-    flex-grow: 1;
     width: auto;
     text-align: center;
     max-width: none;
@@ -37368,8 +37371,6 @@ div.shine {
 @media screen and (min-width: 1024px) {
   .launch-code {
     animation-name: anim-slide-down;
-    position: sticky;
-    top: 0;
     z-index: 40;
   }
 }
