--- a/docs/website.scss
+++ b/docs/website.scss
@@ -719,7 +719,8 @@ $container-max-width: iv.$fullhd;
 .masterclass-body {
   background-color: #333;
   position: relative;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/images/coding-background.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(/assets/images/coding-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -729,8 +730,8 @@ $container-max-width: iv.$fullhd;
   padding: 2rem;
   border-radius: 1rem;
   width: calc(100% - 2rem);
-  box-shadow: 0px 0px 64px 0px rgba(15, 219, 128, 0.20);
-  border: 2px solid rgba(15, 219, 128, 0.20);
+  box-shadow: 0px 0px 64px 0px rgba(15, 219, 128, 0.2);
+  border: 2px solid rgba(15, 219, 128, 0.2);
   overflow: hidden;
   max-width: 400px;
   animation-name: anim-slide-up;
@@ -779,7 +780,8 @@ div.shine {
 .launch-code {
   animation-name: anim-fade-in;
   animation-duration: 1s;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/coding-background.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(/assets/images/coding-background.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
@@ -861,7 +863,6 @@ div.shine {
 
     h3,
     small {
-      flex-grow: 1;
       width: auto;
       text-align: center;
       max-width: none;
@@ -873,8 +874,6 @@ div.shine {
 @media screen and (min-width: 1024px) {
   .launch-code {
     animation-name: anim-slide-down;
-    position: sticky;
-    top: 0;
     z-index: 40;
   }
 }
