--- a/sass/helpers/aspect-ratio.scss
+++ b/sass/helpers/aspect-ratio.scss
@@ -6,7 +6,7 @@
   $w: list.nth($pair, 1);
   $h: list.nth($pair, 2);
 
-  .#{iv.$helpers-prefix}aspect-ratio-#{$w}by#{$h} {
+  .#{iv.$class-prefix}#{iv.$helpers-prefix}aspect-ratio-#{$w}by#{$h} {
     aspect-ratio: #{$w} / #{$h};
   }
 }
