--- a/docs/_includes/website/banner.html
+++ b/docs/_includes/website/banner.html
@@ -1,15 +1,13 @@
-<div class="launch-code is-animated">
-  <h3>
-    <a href="https://cssmasterclass.io/" target="_blank"
-      ><img
+<a href="https://cssmasterclass.io/" target="_blank" class="launch-code is-animated">
+  <h3><img
         src="{{site.url}}/assets/images/masterclass/logo-desktop.png"
         height="40"
         width="300"
-    /></a>
+    />
   </h3>
 
   <small>
     Learn CSS with 🎓 online interactive courses,📺 educational videos, and
     🧑🏻‍💻project-building tutorials.
   </small>
-</div>
+</a>
