--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -34288,14 +34288,18 @@ has-background-moon.is-hoverable:active {
     --scale: 0.75;
   }
 }
+.bd-carbon {
+  aspect-ratio: 40/26;
+  max-height: 280px !important;
+  max-width: 400px !important;
+}
 .bd-carbon, .bd-carbon > div {
   align-items: center;
   display: flex;
   justify-content: center;
 }
 .bd-carbon > div {
-  height: 280px !important;
-  width: 400px !important;
+  aspect-ratio: 40/26;
 }
 
 .highlight {
@@ -37307,6 +37311,7 @@ div.shine {
   gap: 0.5rem 1rem;
   white-space: nowrap;
   flex-direction: column;
+  overflow: hidden;
 }
 .launch-code h3,
 .launch-code small {
@@ -37328,6 +37333,7 @@ div.shine {
   display: block;
   opacity: 1;
   font-weight: 400;
+  white-space: normal;
 }
 .launch-code .launch-shine {
   animation-duration: 1s;
