--- a/docs/_sass/docs/hero.scss
+++ b/docs/_sass/docs/hero.scss
@@ -93,6 +93,10 @@
 }
 
 .bd-carbon {
+  aspect-ratio: 40 / 26;
+  max-height: 280px !important;
+  max-width: 400px !important;
+
   &,
   & > div {
     align-items: center;
@@ -101,7 +105,6 @@
   }
 
   > div {
-    height: 280px !important;
-    width: 400px !important;
+    aspect-ratio: 40 / 26;
   }
 }
