Fix banners layout

--- a/docs/_sass/docs/hero.scss
+++ b/docs/_sass/docs/hero.scss
@@ -37,6 +37,12 @@
   }
 }
 
+.bd-hero-carbon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (min-width: 1400px) {
   .bd-hero.is-docs {
     flex-wrap: nowrap;
