--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -34242,6 +34242,12 @@ has-background-moon.is-hoverable:active {
   padding: calc(var(--scale) * 3rem);
 }
 
+.bd-hero-carbon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (min-width: 1400px) {
   .bd-hero.is-docs {
     flex-wrap: nowrap;
@@ -37371,7 +37377,7 @@ div.shine {
     width: auto;
     text-align: center;
     max-width: none;
-    flex-basis: 20rem;
+    flex-basis: 30rem;
   }
 }
 @media screen and (min-width: 1024px) {
