--- a/sass/utilities/css-variables.scss
+++ b/sass/utilities/css-variables.scss
@@ -6,8 +6,6 @@
 @use "initial-variables" as iv;
 @use "functions" as fn;
 
-$variables-host: iv.$variables-host;
-
 @function buildVarName($name, $prefix: "", $suffix: "") {
   @return "--#{iv.$cssvars-prefix}#{$prefix}#{$name}#{$suffix}";
 }
@@ -497,7 +495,7 @@ $variables-host: iv.$variables-host;
 
 @mixin system-theme($name) {
   @media (prefers-color-scheme: #{$name}) {
-    #{$variables-host} {
+    #{iv.$variables-host} {
       @content;
     }
   }
