--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -101,7 +101,7 @@ $navbar-colors: dv.$colors !default;
   z-index: cv.getVar("navbar-fixed-z");
 }
 
-#{cv.$variables-host} {
+#{iv.$variables-host} {
   @include cv.register-vars(
     (
       "navbar-height": #{$navbar-height},
