--- a/sass/form/tools.scss
+++ b/sass/form/tools.scss
@@ -15,7 +15,7 @@ $label-colors: shared.$form-colors !default;
 
 $field-block-spacing: 0.75rem !default;
 
-#{cv.$variables-host} {
+#{iv.$variables-host} {
   @include cv.register-vars(
     (
       "label-color": #{$label-color},
