--- a/sass/grid/columns.scss
+++ b/sass/grid/columns.scss
@@ -7,7 +7,7 @@
 
 $column-gap: 0.75rem !default;
 
-#{cv.$variables-host} {
+#{iv.$variables-host} {
   @include cv.register-vars(
     (
       "column-gap": #{$column-gap},
