--- a/sass/utilities/controls.scss
+++ b/sass/utilities/controls.scss
@@ -16,10 +16,7 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default;
 
 $control-focus-shadow-l: 50% !default;
 
-@debug cv.$variables-host;
-@debug iv.$radius;
-
-#{cv.$variables-host} {
+#{iv.$variables-host} {
   @include cv.register-vars(
     (
       "control-radius": #{$control-radius},
