Fix footer styling

--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -32326,6 +32326,7 @@ has-background-moon.is-hoverable:active {
 .bd-ami-footer {
   border-radius: 0.25rem;
   height: 4rem;
+  aspect-ratio: 2.5/1;
 }
 
 .bd-ami-footer img {
@@ -32336,6 +32337,13 @@ has-background-moon.is-hoverable:active {
 .bd-footer-donation-title {
   font-size: 1.125em;
   margin-bottom: 0.5em;
+}
+
+.bd-footer-donation-items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
 }
 
 .bd-footer-donation-action {
