--- a/docs/_sass/home/amis.scss
+++ b/docs/_sass/home/amis.scss
@@ -47,6 +47,7 @@
 .bd-ami-footer {
   border-radius: 0.25rem;
   height: 4rem;
+  aspect-ratio: 2.5 / 1;
 }
 
 .bd-ami-footer img {
@@ -57,6 +58,13 @@
 .bd-footer-donation-title {
   font-size: 1.125em;
   margin-bottom: 0.5em;
+}
+
+.bd-footer-donation-items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
 }
 
 .bd-footer-donation-action {
