fix: replace deprecated Sass unquote() with string.unquote()

--- a/sass/utilities/css-variables.scss
+++ b/sass/utilities/css-variables.scss
@@ -31,7 +31,7 @@
 
 @function getRgbaVar($name, $alpha, $prefix: "", $suffix: "") {
   $varName: buildVarName($name, $prefix, $suffix);
-  @return unquote("rgba(var(#{$varName}), #{$alpha})");
+  @return string.unquote("rgba(var(#{$varName}), #{$alpha})");
 }
 
 @mixin register-var($name, $value, $prefix: "", $suffix: "") {
