Fix icon brightening on label hover

--- a/sass/form/tools.scss
+++ b/sass/form/tools.scss
@@ -270,7 +270,8 @@ $field-block-spacing: 0.75rem !default;
   &.#{iv.$class-prefix}has-icons-right {
     .#{iv.$class-prefix}input,
     .#{iv.$class-prefix}select {
-      &:hover {
+      &:hover,
+      &:has(select:hover) {
         & ~ .#{iv.$class-prefix}icon {
           color: cv.getVar("input-icon-hover-color");
         }
