--- a/docs/_sass/docs/hero.scss
+++ b/docs/_sass/docs/hero.scss
@@ -99,9 +99,9 @@
 }
 
 .bd-carbon {
-  aspect-ratio: 40 / 26;
-  max-height: 280px !important;
-  max-width: 400px !important;
+  aspect-ratio: 40 / 28;
+  height: 280px !important;
+  width: 400px !important;
 
   &,
   & > div {
@@ -111,6 +111,6 @@
   }
 
   > div {
-    aspect-ratio: 40 / 26;
+    aspect-ratio: 40 / 28;
   }
 }
