--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -33994,9 +33994,6 @@ has-background-moon.is-hoverable:active {
   padding: 1em;
 }
 
-.bulma-placeholder-mixin {
-  border-color: hsl(195, 53%, 79%);
-}
 .bulma-placeholder-mixin::-moz-placeholder {
   color: lightblue;
 }
@@ -34008,6 +34005,9 @@ has-background-moon.is-hoverable:active {
 }
 .bulma-placeholder-mixin:-ms-input-placeholder {
   color: lightblue;
+}
+.bulma-placeholder-mixin {
+  border-color: hsl(195, 53%, 79%);
 }
 .bulma-placeholder-mixin:hover {
   border-color: hsl(195, 83%, 66%);
@@ -34136,14 +34136,16 @@ has-background-moon.is-hoverable:active {
   transition-duration: var(--bulma-duration);
   transition-property: background-color, border-color, box-shadow, color;
   vertical-align: top;
-  background: deeppink;
-  color: white;
 }
 .bulma-control-mixin:focus, .bulma-control-mixin:focus-visible, .bulma-control-mixin:focus-within, .bulma-control-mixin.is-focused, .bulma-control-mixin:active, .bulma-control-mixin.is-active {
   outline: none;
 }
 .bulma-control-mixin[disabled], fieldset[disabled] .bulma-control-mixin {
   cursor: not-allowed;
+}
+.bulma-control-mixin {
+  background: deeppink;
+  color: white;
 }
 .bulma-control-mixin.is-small {
   border-radius: var(--bulma-radius-small);
@@ -34177,14 +34179,16 @@ has-background-moon.is-hoverable:active {
   transition-duration: var(--bulma-duration);
   transition-property: background-color, border-color, box-shadow, color;
   vertical-align: top;
-  background: mediumblue;
-  color: white;
 }
 .bulma-control-extend:focus, .bulma-control-extend:focus-visible, .bulma-control-extend:focus-within, .bulma-control-extend.is-focused, .bulma-control-extend:active, .bulma-control-extend.is-active {
   outline: none;
 }
 .bulma-control-extend[disabled], fieldset[disabled] .bulma-control-extend {
   cursor: not-allowed;
+}
+.bulma-control-extend {
+  background: mediumblue;
+  color: white;
 }
 
 .bd-websites {
@@ -34308,9 +34312,9 @@ has-background-moon.is-hoverable:active {
   }
 }
 .bd-carbon {
-  aspect-ratio: 40/26;
-  max-height: 280px !important;
-  max-width: 400px !important;
+  aspect-ratio: 40/28;
+  height: 280px !important;
+  width: 400px !important;
 }
 .bd-carbon, .bd-carbon > div {
   align-items: center;
@@ -34318,18 +34322,18 @@ has-background-moon.is-hoverable:active {
   justify-content: center;
 }
 .bd-carbon > div {
-  aspect-ratio: 40/26;
+  aspect-ratio: 40/28;
 }
 
+.highlight:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
 .highlight {
   background-color: var(--hl-gray-09);
   border-radius: var(--hl-radius);
   color: var(--hl-gray-03);
   font-size: 0.875em;
   position: relative;
-}
-.highlight:not(:last-child) {
-  margin-bottom: 1.5rem;
 }
 .highlight.bd-is-hovering {
   box-shadow: inset 0 0 0 2px var(--hl-orange);
@@ -37260,6 +37264,7 @@ svg {
 .masterclass-body {
   background-color: #333;
   position: relative;
+  background-color: #111;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/images/coding-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -37315,8 +37320,8 @@ div.shine {
   }
 }
 .launch-code {
-  animation-name: anim-fade-in;
   animation-duration: 1s;
+  background-color: #111;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/coding-background.jpg);
   background-size: cover;
   background-position: center;
@@ -37396,11 +37401,5 @@ div.shine {
     text-align: center;
     max-width: none;
     flex-basis: 30rem;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .launch-code {
-    animation-name: anim-slide-down;
-    z-index: 40;
   }
 }
