--- a/docs/website.scss
+++ b/docs/website.scss
@@ -638,8 +638,8 @@ $container-max-width: iv.$fullhd;
 .shine {
   --transition: 800ms cubic-bezier(0.25, 1, 0.5, 1);
   transition: var(--transition);
-  transition-property: --gradient-angle-offset, --gradient-percent,
-    --gradient-shine;
+  transition-property:
+    --gradient-angle-offset, --gradient-percent, --gradient-shine;
 
   &,
   &::before,
@@ -725,7 +725,9 @@ $container-max-width: iv.$fullhd;
 .masterclass-body {
   background-color: #333;
   position: relative;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+  background-color: #111;
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(/assets/images/coding-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -784,9 +786,10 @@ div.shine {
 }
 
 .launch-code {
-  animation-name: anim-fade-in;
   animation-duration: 1s;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background-color: #111;
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(/assets/images/coding-background.jpg);
   background-size: cover;
   background-position: center;
@@ -876,12 +879,5 @@ div.shine {
       max-width: none;
       flex-basis: 30rem;
     }
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .launch-code {
-    animation-name: anim-slide-down;
-    z-index: 40;
   }
 }
