--- a/docs/_includes/global/head.html
+++ b/docs/_includes/global/head.html
@@ -30,7 +30,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 <link
   rel="stylesheet"
-  href="{{ site.url }}/assets/css/{{ site.docs_file }}.css?v={{ site.time | date: "%Y%m%d%H%M" }}"
+  href="{{ site.url }}/assets/css/{{ site.docs_file }}.css?v={{ site.data.asset_hash.css }}"
 >
 
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
